Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59726

no access to second camera on android phones with dual front/back cameras

XMLWordPrintable

    • Android
    • 633597b00 (dev), cca3d6e4a (tqtc/lts-5.15), c1b790ae7 (6.4), 910f0180e (tqtc/lts-6.2), 8d9e4b000 (6.5), 863106a56 (dev), 9fd88b8d7 (6.5)
    • 2023wk02FOQtforAndroid

      Some smartphones, like LG G5/G6, have dual back cameras - standard and wide(fish-eye) camera. Current implementation correctly gather info from android part, but select the same name for both cameras in multimedia plugin fro android.
      Selecting a second camera will always switch to first camera(QCameraInfo->name return "front" for both cameras), so no way to access it.

      STR: run QtWidget or QML Multimedia Camera example on dual front/back camera smartphone

        1. dualCameraIssue.png
          44 kB
          Andrey Yaromenok
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            ayaromenok Andrey Yaromenok
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: