Fix access to multi front/back cameras on Android devices

Allow to access second (and more) front or back cameras on Android
devices by adding a counter number at the end of additional camera name
and description (don't need to brake current code compatibility or
confuse majority of the users with only one front/back cameras on their
devices)

Fixes: QTBUG-59726
Change-Id: Icecb3af7521d4bbd3fbb0b953895c045cfdbf60a
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>